# cybercity-data

./: .env.example  .gitignore  .gitlab-ci.yml  .methodology.yml  .pipeline.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml  reviewer.yml  verify.yml
docs/: ARCHITECTURE.md  BACKLOG.md  DATA_FLOW.md  DEVELOPMENT.md  ORGANIZATIONS.md  PIPELINES.md
docs/adr/: 0001-per-org-layout.md  0002-pydantic-v2-extra-forbid.md  0003-explicit-networks-ip-v2.md  0004-service-decoy-mock.md  0005-org-id-injected-by-loader.md  0006-cli-commands-exit-codes.md  0007-build-artifacts.md  0008-strict-warnings-fail-ci.md  0009-schema-version-code-constant.md  0010-organization-structural-only.md  0011-links-directed.md  0012-service-asset-directories.md  0013-engine-zip-always-produced.md  0014-new-artifacts.md  0015-mypy-strict.md  0016-generated-networks-allocator.md  0017-layered-cli-architecture.md  0018-pipeline-steps-testable.md  0019-service-honeypot-purpose.md  README.md
docs/specs/: EXAMPLE.md  allocator.md  build.md  check.md  city_model.md  model.md  scenario.md  vuln.md
organizations/: city.yml
organizations/airport/: config.yml
organizations/ambulance/: config.yml
organizations/bank/: config.yml
organizations/bio-lab/: config.yml
organizations/city-bank/: config.yml
tests/: __init__.py  conftest.py  test_allocator.py  test_build.py  test_check.py  test_cli.py  test_loader.py  test_models.py  test_property.py
tools/: deploy.py
(+128 files in other folders)
