[project]
name = "cybercity-data"
version = "0.4.0"
description = "Canonical declarative city model — validator and renderer"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "typer>=0.12",
]

[project.scripts]
cybercity-data = "cybercity_data.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cybercity_data"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=7.1.0",
    "ruff>=0.5",
    "mypy>=1.0",
    "hypothesis>=6.0",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
